# player-one.nvim

./: .gitignore  .luarc.json  Cargo.toml  Cross.toml  README.md  build.rs
.github/workflows/: .build.yml  build.yml  ci.yml  release.yml
lua/player-one/: api.lua  autocmd.lua  autocmds.lua  config.lua  debug.lua  health.lua  init.lua  lib.lua  sounds.lua  state.lua  test.lua  types.lua  utils.lua
lua/player-one/audio/: notes.lua
lua/player-one/binary/: download.lua  errors.lua  init.lua  paths.lua  system.lua  version.lua
lua/player-one/binary/download/: async.lua  files.lua  init.lua
lua/player-one/sounds/: chiptune.lua  init.lua  preset.lua  tone.lua
lua/player-one/sounds/presets/: tone.lua
lua/player-one/themes/: chiptune.lua  crystal.lua  init.lua  synth.lua
plugin/: player-one.lua
plugin/player-one/: api.lua  config.lua  utils.lua
src/: lib.rs  lua.rs  player.rs  sound.rs  tests.rs
src/lua/: mod.rs
src/playback/: error.rs  mod.rs
src/synthesizer/: engine.rs  mod.rs  params.rs  source.rs
tests/: playback_spec.lua  utils_spec.lua
