[package]
name = "playerone"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.10.2", features = ["luajit", "module", "serialize"] }
rodio = "0.20.1"
oorandom = "11.1.4"
assert_approx_eq = "1.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
sfxr = { git = "https://github.com/bzar/sfxr-rs", branch = "master" }
