[package]
name = "player-one"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.10.2", features = ["luajit", "module", "serialize"] }
rodio = "0.20.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
sfxr = { git = "https://github.com/bzar/sfxr-rs", branch = "master" }

[build]
rustc-args = ["-Vv"]
