[package]
name = "player-one"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "player_one"

[dependencies]
mlua = { version = "0.10.3", features = ["module", "luajit"] }
rodio = "0.20.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
sfxr = { git = "https://github.com/bzar/sfxr-rs", branch = "master" }
# sfxr = "0.1.4"
